Fixed social icons on medium screens

--- a/sections/topbar.liquid
+++ b/sections/topbar.liquid
@@ -9,7 +9,7 @@
 Loop through the social network links
 {% endcomment %}
 <div class="grid-full top">
-  <div class="grid__item push--large--one-twelfth large--left small--text-center">
+  <div class="grid__item push--large--one-twelfth large--left medium--text-center small--text-center">
     {%if show_social_icons%}
   <ul class="inline-list social-icons">
     {% if settings.social_twitter_link != blank %}
