--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -37,6 +37,7 @@
 
   <!-- CSS ================================================== -->
   {{ 'timber.scss.css' | asset_url | stylesheet_tag }}
+  {{ '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css' | stylesheet_tag }}
   {% include 'google-fonts' %}
 
   <script>
@@ -92,6 +93,10 @@
 
       {% section 'footer' %}
 
+                <a href="#" class="back-to-top" style="display: inline;">
+            <i class="fa fa-chevron-circle-up"></i>
+          </a>
+
     </main>
 
     {% comment %}
@@ -112,20 +117,42 @@
 
   </div>
 
+  {% comment %}
+    Theme dependent JS are loaded here for performance reasons.
+  {% endcomment %}
   <script>
-jQuery(function() {
-  jQuery('.swatch :radio').change(function() {
-    var optionIndex = jQuery(this).closest('.swatch').attr('data-option-index');
-    var optionValue = jQuery(this).val();
-    jQuery(this)
-      .closest('form')
-      .find('.single-option-selector')
-      .eq(optionIndex)
-      .val(optionValue)
-      .trigger('change');
-  });
-});
-</script>
+    //swatch for products
+      jQuery(function() {
+        jQuery('.swatch :radio').change(function() {
+          var optionIndex = jQuery(this).closest('.swatch').attr('data-option-index');
+          var optionValue = jQuery(this).val();
+          jQuery(this)
+            .closest('form')
+            .find('.single-option-selector')
+            .eq(optionIndex)
+            .val(optionValue)
+            .trigger('change');
+        });
+      });
+
+    // Scroll to top
+    jQuery(document).ready(function() {
+      var offset = 100;
+      var duration = 300;
+      jQuery(window).scroll(function() {
+        if (jQuery(this).scrollTop() > 100) {
+        jQuery('.back-to-top').fadeIn(duration);
+        } else {
+        jQuery('.back-to-top').fadeOut(duration);
+        }
+      });
+      jQuery('.back-to-top').click(function(event) {
+        event.preventDefault();
+        jQuery('html, body').animate({scrollTop: 0}, duration);
+        return false;
+      })
+    });
+  </script>
 
 </body>
 </html>
